--- a/src/cie_thread_configurator/CMakeLists.txt
+++ b/src/cie_thread_configurator/CMakeLists.txt
@@ -7,15 +7,16 @@ endif()
 
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
+find_package(agnocastlib REQUIRED)
 
 find_package(cie_config_msgs REQUIRED)
 find_package(yaml-cpp REQUIRED)
 
 add_library(thread_configurator SHARED src/util.cpp)
-ament_target_dependencies(thread_configurator rclcpp cie_config_msgs)
+ament_target_dependencies(thread_configurator rclcpp agnocastlib cie_config_msgs)
 
 add_executable(thread_configurator_node src/main.cpp src/thread_configurator_node.cpp src/prerun_node.cpp)
-ament_target_dependencies(thread_configurator_node rclcpp cie_config_msgs)
+ament_target_dependencies(thread_configurator_node rclcpp agnocastlib cie_config_msgs)
 target_link_libraries(thread_configurator_node yaml-cpp thread_configurator)
 
 target_include_directories(thread_configurator_node PRIVATE
@@ -42,6 +43,12 @@ install(
 
 install(TARGETS thread_configurator_node DESTINATION lib/${PROJECT_NAME})
 
+install(
+  DIRECTORY launch/
+  DESTINATION share/${PROJECT_NAME}/launch
+)
+
 ament_export_targets(export_${PROJECT_NAME} HAS_LIBRARY_TARGET)
 ament_export_include_directories(include)
+ament_export_dependencies(agnocastlib)
 ament_package()
