--- a/src/agnocastlib/CMakeLists.txt
+++ b/src/agnocastlib/CMakeLists.txt
@@ -24,7 +24,6 @@ find_package(rcl_yaml_param_parser REQUIRED)
 find_package(tracetools REQUIRED)
 find_package(LTTngUST REQUIRED)
 find_package(cie_config_msgs REQUIRED)
-find_package(cie_thread_configurator REQUIRED)
 find_package(rosgraph_msgs REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(ament_index_cpp REQUIRED)
@@ -36,13 +35,14 @@ add_library(agnocast SHARED
   src/agnocast_single_threaded_executor.cpp src/agnocast_multi_threaded_executor.cpp
   src/agnocast_callback_isolated_executor.cpp
   src/agnocast_tracepoint_wrapper.c src/agnocast_client.cpp
+  src/agnocast_cie_utils.cpp
   src/node/agnocast_node.cpp src/node/agnocast_arguments.cpp src/node/agnocast_context.cpp src/node/agnocast_signal_handler.cpp
   src/node/agnocast_only_executor.cpp src/node/agnocast_only_single_threaded_executor.cpp src/node/agnocast_only_multi_threaded_executor.cpp
   src/node/node_interfaces/node_base.cpp src/node/node_interfaces/node_parameters.cpp src/node/node_interfaces/node_topics.cpp src/node/node_interfaces/node_clock.cpp src/node/node_interfaces/node_time_source.cpp src/node/node_interfaces/node_services.cpp src/node/node_interfaces/node_logging.cpp
   src/bridge/standard/agnocast_standard_bridge_ipc_event_loop.cpp src/bridge/standard/agnocast_standard_bridge_loader.cpp src/bridge/standard/agnocast_standard_bridge_manager.cpp src/bridge/agnocast_bridge_utils.cpp
   src/bridge/performance/agnocast_performance_bridge_ipc_event_loop.cpp src/bridge/performance/agnocast_performance_bridge_loader.cpp src/bridge/performance/agnocast_performance_bridge_manager.cpp)
 
-ament_target_dependencies(agnocast cie_thread_configurator rosgraph_msgs cie_config_msgs ament_index_cpp message_filters)
+ament_target_dependencies(agnocast rosgraph_msgs cie_config_msgs ament_index_cpp message_filters)
 
 target_link_libraries(agnocast
   ${rclcpp_LIBRARIES}
@@ -199,7 +199,7 @@ target_link_libraries(agnocast_component_container_cie
   agnocast
 )
 
-ament_target_dependencies(agnocast_component_container_cie rclcpp rclcpp_components cie_thread_configurator)
+ament_target_dependencies(agnocast_component_container_cie rclcpp rclcpp_components)
 
 install(
   TARGETS agnocast_component_container agnocast_component_container_mt agnocast_component_container_cie
@@ -277,7 +277,7 @@ if(BUILD_TESTING)
     cie_config_msgs
     std_msgs)
   set_tests_properties(test_integration_${PROJECT_NAME} PROPERTIES
-    ENVIRONMENT "GTEST_DEATH_TEST_STYLE=threadsafe"
+    ENVIRONMENT "GTEST_DEATH_TEST_STYLE=threadsafe;LD_PRELOAD=${CMAKE_CURRENT_SOURCE_DIR}/../../agnocast_heaphook/target/release/libagnocast_heaphook.so"
     TIMEOUT 120
   )
 
@@ -285,7 +285,7 @@ if(BUILD_TESTING)
   add_library(test_publisher_component SHARED
     test/integration/src/test_publisher_component.cpp)
   target_link_libraries(test_publisher_component agnocast)
-  ament_target_dependencies(test_publisher_component rclcpp rclcpp_components std_msgs cie_thread_configurator)
+  ament_target_dependencies(test_publisher_component rclcpp rclcpp_components std_msgs)
   rclcpp_components_register_node(test_publisher_component
     PLUGIN "agnocastlib_test::TestPublisherComponent"
     EXECUTABLE test_publisher_component_node)
@@ -332,5 +332,5 @@ endif()
 
 ament_export_targets(export_${PROJECT_NAME} HAS_LIBRARY_TARGET)
 ament_export_include_directories(include)
-ament_export_dependencies(cie_thread_configurator cie_config_msgs message_filters)
+ament_export_dependencies(cie_config_msgs message_filters)
 ament_package()
