--- a/src/agnocast_components/src/node_main.cpp.in
+++ b/src/agnocast_components/src/node_main.cpp.in
@@ -1,6 +1,7 @@
 #include <algorithm>
 #include <memory>
 #include <string>
+#include <unistd.h>
 #include <vector>
 
 #include "agnocast/agnocast.hpp"
