feat(agnocastlib, agnocast_components): add glog initialization to component containers and node templates

--- a/src/agnocast_components/package.xml
+++ b/src/agnocast_components/package.xml
@@ -18,6 +18,10 @@
   <depend>class_loader</depend>
   <depend>agnocastlib</depend>
 
+  <build_depend>glog</build_depend>
+  <build_export_depend>glog</build_export_depend>
+  <exec_depend>glog</exec_depend>
+
   <export>
     <build_type>ament_cmake</build_type>
   </export>
