--- a/src/agnocast_components/src/node_main_agnocast_only.cpp.in
+++ b/src/agnocast_components/src/node_main_agnocast_only.cpp.in
@@ -3,6 +3,7 @@
 #include <string>
 #include <unistd.h>
 #include <vector>
+#include <glog/logging.h>
 
 #include "agnocast/agnocast.hpp"
 #include "class_loader/class_loader.hpp"
@@ -14,6 +15,9 @@
 
 int main(int argc, char * argv[])
 {
+  google::InitGoogleLogging(argv[0]);
+  google::InstallFailureSignalHandler();
+
   // Use agnocast::init for agnocast::Node
   agnocast::init(argc, argv);
   auto args = rclcpp::remove_ros_arguments(argc, argv);
