--- a/src/agnocast_components/package.xml
+++ b/src/agnocast_components/package.xml
@@ -18,9 +18,9 @@
   <depend>class_loader</depend>
   <depend>agnocastlib</depend>
 
-  <build_depend>glog</build_depend>
-  <build_export_depend>glog</build_export_depend>
-  <exec_depend>glog</exec_depend>
+  <build_depend>libgoogle-glog-dev</build_depend>
+  <build_export_depend>libgoogle-glog-dev</build_export_depend>
+  <exec_depend>libgoogle-glog-dev</exec_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
