--- a/src/agnocastlib/package.xml
+++ b/src/agnocastlib/package.xml
@@ -30,8 +30,8 @@
   <depend>rosgraph_msgs</depend>
   <depend>ament_index_cpp</depend>
 
-  <build_depend>glog</build_depend>
-  <exec_depend>glog</exec_depend>
+  <build_depend>libgoogle-glog-dev</build_depend>
+  <exec_depend>libgoogle-glog-dev</exec_depend>
 
   <depend>cie_config_msgs</depend>
   <depend>cie_thread_configurator</depend>
