feat(agnocastlib, agnocast_components): add glog initialization to component containers and node templates (#1026)
* feat(agnocastlib, agnocast_components): add glog initialization to component containers and node templates

* fix(agnocast_components): drop QUIET from find_package(glog) and add target guard

* fix

* fix

* fix: clang-tidy

* fix

--- a/src/agnocastlib/package.xml
+++ b/src/agnocastlib/package.xml
@@ -30,6 +30,9 @@
   <depend>rosgraph_msgs</depend>
   <depend>ament_index_cpp</depend>
 
+  <build_depend>libgoogle-glog-dev</build_depend>
+  <exec_depend>libgoogle-glog-dev</exec_depend>
+
   <depend>cie_config_msgs</depend>
   <depend>cie_thread_configurator</depend>
   <depend>agnocast_sample_interfaces</depend>
