--- a/src/cie_thread_configurator/CMakeLists.txt
+++ b/src/cie_thread_configurator/CMakeLists.txt
@@ -44,4 +44,16 @@ install(TARGETS thread_configurator_node DESTINATION lib/${PROJECT_NAME})
 
 ament_export_targets(export_${PROJECT_NAME} HAS_LIBRARY_TARGET)
 ament_export_include_directories(include)
+
+if(BUILD_TESTING)
+  find_package(ament_cmake_gmock REQUIRED)
+  find_package(std_msgs REQUIRED)
+
+  ament_add_gmock(test_unit_${PROJECT_NAME}
+    test/unit/test_create_callback_group_id.cpp)
+  target_include_directories(test_unit_${PROJECT_NAME} PRIVATE include)
+  target_link_libraries(test_unit_${PROJECT_NAME} thread_configurator)
+  ament_target_dependencies(test_unit_${PROJECT_NAME} rclcpp std_msgs)
+endif()
+
 ament_package()
