--- a/src/cie_thread_configurator/package.xml
+++ b/src/cie_thread_configurator/package.xml
@@ -18,6 +18,8 @@
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
+  <test_depend>ament_cmake_gmock</test_depend>
+  <test_depend>std_msgs</test_depend>
 
   <depend>rclcpp</depend>
   <depend>yaml-cpp</depend>
