--- a/src/agnocastlib/CMakeLists.txt
+++ b/src/agnocastlib/CMakeLists.txt
@@ -39,6 +39,7 @@ add_library(agnocast SHARED
   src/agnocast_tracepoint_wrapper.c src/agnocast_client.cpp
   src/node/agnocast_node.cpp src/node/agnocast_arguments.cpp src/node/agnocast_context.cpp src/node/agnocast_signal_handler.cpp
   src/node/agnocast_only_executor.cpp src/node/agnocast_only_single_threaded_executor.cpp src/node/agnocast_only_multi_threaded_executor.cpp
+  src/node/agnocast_only_callback_isolated_executor.cpp
   src/cie_client_utils.cpp
   src/node/node_interfaces/node_base.cpp src/node/node_interfaces/node_parameters.cpp src/node/node_interfaces/node_topics.cpp src/node/node_interfaces/node_clock.cpp src/node/node_interfaces/node_time_source.cpp src/node/node_interfaces/node_services.cpp src/node/node_interfaces/node_logging.cpp
   src/bridge/standard/agnocast_standard_bridge_ipc_event_loop.cpp src/bridge/standard/agnocast_standard_bridge_loader.cpp src/bridge/standard/agnocast_standard_bridge_manager.cpp src/bridge/agnocast_bridge_utils.cpp
@@ -182,6 +183,18 @@ if(BUILD_TESTING)
   set_tests_properties(test_integration_${PROJECT_NAME} PROPERTIES
     ENVIRONMENT "GTEST_DEATH_TEST_STYLE=threadsafe"
     TIMEOUT 120
+  )
+
+  # AgnocastOnly callback isolated executor integration test (requires kernel module, no mock)
+  ament_add_gmock(test_integration_agnocast_only_callback_isolated_executor_${PROJECT_NAME}
+    test/integration/test_agnocast_only_callback_isolated_executor.cpp)
+  target_link_libraries(test_integration_agnocast_only_callback_isolated_executor_${PROJECT_NAME} agnocast)
+  ament_target_dependencies(test_integration_agnocast_only_callback_isolated_executor_${PROJECT_NAME}
+    cie_config_msgs)
+  set_tests_properties(test_integration_agnocast_only_callback_isolated_executor_${PROJECT_NAME} PROPERTIES
+    ENVIRONMENT "GTEST_DEATH_TEST_STYLE=threadsafe"
+    TIMEOUT 120
+    LABELS "requires_kernel_module"
   )
 
   # Test component for ComponentManagerCallbackIsolated integration tests
