fix(agnocastlib): add LD_PRELOAD for heaphook to integration tests

--- a/src/agnocastlib/CMakeLists.txt
+++ b/src/agnocastlib/CMakeLists.txt
@@ -164,7 +164,7 @@ if(BUILD_TESTING)
   target_link_libraries(test_integration_message_filters_${PROJECT_NAME} agnocast)
   ament_target_dependencies(test_integration_message_filters_${PROJECT_NAME} std_msgs message_filters)
   set_tests_properties(test_integration_message_filters_${PROJECT_NAME} PROPERTIES
-    ENVIRONMENT "GTEST_DEATH_TEST_STYLE=threadsafe"
+    ENVIRONMENT "GTEST_DEATH_TEST_STYLE=threadsafe;LD_PRELOAD=${CMAKE_INSTALL_PREFIX}/lib/libagnocast_heaphook.so:"
     LABELS "requires_kernel_module"
   )
 
@@ -192,7 +192,7 @@ if(BUILD_TESTING)
   ament_target_dependencies(test_integration_agnocast_only_callback_isolated_executor_${PROJECT_NAME}
     cie_config_msgs)
   set_tests_properties(test_integration_agnocast_only_callback_isolated_executor_${PROJECT_NAME} PROPERTIES
-    ENVIRONMENT "GTEST_DEATH_TEST_STYLE=threadsafe"
+    ENVIRONMENT "GTEST_DEATH_TEST_STYLE=threadsafe;LD_PRELOAD=${CMAKE_INSTALL_PREFIX}/lib/libagnocast_heaphook.so:"
     TIMEOUT 120
     LABELS "requires_kernel_module"
   )
