--- a/src/agnocastlib/package.xml
+++ b/src/agnocastlib/package.xml
@@ -36,6 +36,10 @@
   <depend>cie_config_msgs</depend>
   <depend>cie_thread_configurator</depend>
   <depend>agnocast_sample_interfaces</depend>
+  <depend>tf2</depend>
+  <depend>tf2_ros</depend>
+  <depend>tf2_msgs</depend>
+  <depend>geometry_msgs</depend>
 
   <!-- Uncomment when agnocast_kmod is released from PPA -->
   <!-- <exec_depend>agnocast_kmod</exec_depend> -->
