fix comments and add test
Signed-off-by: Koichi Imai <koichi.imai.2@tier4.jp>

--- a/src/agnocast_e2e_test/test/config_test_2to2.yaml
+++ b/src/agnocast_e2e_test/test/config_test_2to2.yaml
@@ -1,5 +1,5 @@
 test_mode: "agno2ros"
-container0: [p]
-container1: [p]
-container2: [s,s]
+container0: [p,p,s,s]
+container1: []
+container2: []
 container3: []
