fix: change package names from cie_* to agnocast_cie*
Signed-off-by: sykwer <sykwer@gmail.com>

--- a/.github/workflows/build-and-test-agnocastlib-heaphook.yaml
+++ b/.github/workflows/build-and-test-agnocastlib-heaphook.yaml
@@ -49,7 +49,7 @@ jobs:
         echo "$CHANGED_FILES" >> "$GITHUB_OUTPUT"
         echo "EOF" >> "$GITHUB_OUTPUT"
 
-        if echo "$CHANGED_FILES" | grep -qE '(agnocastlib|agnocast_ioctl_wrapper|cie_thread_configurator)/.*\.(cpp|hpp)$'; then
+        if echo "$CHANGED_FILES" | grep -qE '(agnocastlib|agnocast_ioctl_wrapper|agnocast_cie_thread_configurator)/.*\.(cpp|hpp)$'; then
           echo "cpp_changed=true" >> "$GITHUB_OUTPUT"
         else
           echo "cpp_changed=false" >> "$GITHUB_OUTPUT"
