--- a/src/agnocastlib/package.xml
+++ b/src/agnocastlib/package.xml
@@ -32,8 +32,8 @@
 
   <depend>glog</depend>
 
-  <depend>cie_config_msgs</depend>
-  <depend>cie_thread_configurator</depend>
+  <depend>agnocast_cie_config_msgs</depend>
+  <depend>agnocast_cie_thread_configurator</depend>
   <depend>agnocast_sample_interfaces</depend>
 
   <!-- Uncomment when agnocast_kmod is released from PPA -->
