--- a/src/agnocast_cie_config_msgs/package.xml
+++ b/src/agnocast_cie_config_msgs/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>cie_config_msgs</name>
+  <name>agnocast_cie_config_msgs</name>
   <version>0.0.0</version>
   <description>ROS messages for interaction between cie_thread_configurator and callback_isolated_executor.</description>
 
