--- a/src/agnocast_components/CMakeLists.txt
+++ b/src/agnocast_components/CMakeLists.txt
@@ -6,7 +6,8 @@ find_package(rclcpp REQUIRED)
 find_package(rclcpp_components REQUIRED)
 find_package(class_loader REQUIRED)
 find_package(agnocastlib REQUIRED)
-find_package(cie_thread_configurator REQUIRED)
+find_package(agnocast_cie_thread_configurator REQUIRED)
+find_package(agnocast_cie_config_msgs REQUIRED)
 find_package(glog REQUIRED)
 
 add_executable(agnocast_component_container src/agnocast_component_container.cpp)
@@ -19,7 +20,7 @@ ament_target_dependencies(agnocast_component_container_mt rclcpp rclcpp_componen
 
 add_executable(agnocast_component_container_cie src/agnocast_component_container_cie.cpp)
 target_link_libraries(agnocast_component_container_cie glog::glog)
-ament_target_dependencies(agnocast_component_container_cie rclcpp rclcpp_components agnocastlib cie_thread_configurator)
+ament_target_dependencies(agnocast_component_container_cie rclcpp rclcpp_components agnocastlib agnocast_cie_thread_configurator agnocast_cie_config_msgs)
 
 install(
   TARGETS agnocast_component_container agnocast_component_container_mt agnocast_component_container_cie
