--- a/agnocast_kmod/debian/control
+++ b/agnocast_kmod/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Takahiro Ishikawa-Aso <sykwer@gmail.com>
 Homepage: https://github.com/tier4/agnocast
 Standards-Version: 4.5.0
-Build-Depends: debhelper (>= 10), dkms, build-essential, fakeroot, rsync, linux-headers-generic | linux-headers
+Build-Depends: debhelper (>= 10), dkms, dh-dkms, build-essential, fakeroot, rsync, linux-headers-generic | linux-headers
 
 Package: agnocast-kmod-v2.2.0
 Architecture: all
