--- a/agnocast_heaphook/debian/rules
+++ b/agnocast_heaphook/debian/rules
@@ -13,8 +13,13 @@ override_dh_auto_clean:
 	cargo clean
 
 override_dh_auto_install:
-	# Installation is handled by debhelper via debian/install
-	true
+	if [ "$$(. /etc/os-release && echo $$VERSION_CODENAME)" = "jammy" ]; then \
+		ROS_DISTRO=humble; \
+	else \
+		ROS_DISTRO=jazzy; \
+	fi; \
+	install -D -m 0755 target/release/libagnocast_heaphook.so \
+		debian/agnocast-heaphook-v2.2.0/opt/ros/$$ROS_DISTRO/lib/libagnocast_heaphook.so
 
 override_dh_auto_test:
 	# Skipping tests during package build
