fix(agnocast_kmod): fix string handling bugs in node queries and get_version (#1085)
* fix(agnocast_kmod): fix string handling bugs in node queries and get_version

- Replace strncmp with strcmp in get_node_subscriber_topics and
  get_node_publisher_topics. strncmp(a, b, strlen(b)) matches any
  prefix, so querying node "/cam" also returns topics for "/camera".

- Replace strncpy with strscpy in get_topic_subscriber_info and
  get_topic_publisher_info. strncpy(dst, src, strlen(src)) copies
  without NUL terminator, leaking stale slab data to userspace.

- Replace memcpy with strscpy in ioctl_get_version. memcpy with
  strlen(VERSION)+1 is unbounded by destination buffer size.

Signed-off-by: Keita Morisaki <keita.morisaki@tier4.jp>

* test(agnocast_kmod): add KUnit tests for node name matching and get_version

Add KUnit helper functions (count_node_subscriber_topics,
count_node_publisher_topics, get_version_for_test) and test cases that
verify exact node name matching (strcmp) and version retrieval.

Signed-off-by: Keita Morisaki <keita.morisaki@tier4.jp>

* style(agnocast_kmod): fix clang-format issues

Signed-off-by: Keita Morisaki <keita.morisaki@tier4.jp>

* refactor(agnocast_kmod): remove KUnit helper wrappers, test ioctl functions directly

Make ioctl_get_version, ioctl_get_node_subscriber_topics, and
ioctl_get_node_publisher_topics non-static so KUnit tests can call them
directly, following the same convention as other ioctl_ functions.

Remove count_node_subscriber_topics, count_node_publisher_topics, and
get_version_for_test wrapper functions that duplicated core logic.

Signed-off-by: Keita Morisaki <keita.morisaki@tier4.jp>

* refactor(agnocast_kmod): split KUnit tests into one file per tested function

Split agnocast_kunit_node_name_matching into separate files following the
project convention of one test file per tested function:
- agnocast_kunit_get_node_subscriber_topics
- agnocast_kunit_get_node_publisher_topics
- agnocast_kunit_get_version

Signed-o

--- a/agnocast_kmod/Makefile
+++ b/agnocast_kmod/Makefile
@@ -25,7 +25,10 @@ else
 	  agnocast_kunit/agnocast_kunit_add_bridge.o \
 	  agnocast_kunit/agnocast_kunit_remove_bridge.o \
 	  agnocast_kunit/agnocast_kunit_set_ros2_subscriber_num.o \
-	  agnocast_kunit/agnocast_kunit_do_exit.o
+	  agnocast_kunit/agnocast_kunit_do_exit.o \
+	  agnocast_kunit/agnocast_kunit_get_node_subscriber_topics.o \
+	  agnocast_kunit/agnocast_kunit_get_node_publisher_topics.o \
+	  agnocast_kunit/agnocast_kunit_get_version.o
 	ccflags-y += -DKUNIT_BUILD -fprofile-arcs -ftest-coverage
   else
     $(warning "CONFIG_KUNIT or CONFIG_GCOV_KERNEL is not set")
