support ROS_TIME for create_timer
Signed-off-by: Koichi <koichi.imai.2@tier4.jp>

--- a/src/agnocast_sample_application/CMakeLists.txt
+++ b/src/agnocast_sample_application/CMakeLists.txt
@@ -90,6 +90,12 @@ target_include_directories(no_rclcpp_client PRIVATE
   ${agnocastlib_INCLUDE_DIRS}
 )
 
+add_executable(sim_time_timer src/sim_time_timer.cpp)
+ament_target_dependencies(sim_time_timer rclcpp agnocastlib)
+target_include_directories(sim_time_timer PRIVATE
+  ${agnocastlib_INCLUDE_DIRS}
+)
+
 add_library(listener_component SHARED src/minimal_subscriber.cpp)
 ament_target_dependencies(listener_component rclcpp rclcpp_components agnocastlib agnocast_sample_interfaces)
 target_include_directories(listener_component PRIVATE ${agnocastlib_INCLUDE_DIRS})
@@ -149,6 +155,9 @@ install(TARGETS no_rclcpp_server
   DESTINATION lib/${PROJECT_NAME})
 
 install(TARGETS no_rclcpp_client
+  DESTINATION lib/${PROJECT_NAME})
+
+install(TARGETS sim_time_timer
   DESTINATION lib/${PROJECT_NAME})
 
 install(DIRECTORY launch
